SERVER-76448 Fix race condition on rename collection participant service